Update VMService.java